Refactor: remove VectorUtils dependency by inlining vector similarity and serialization logic